--- a/rpt/PatientBillGrouped.jrxml
+++ b/rpt/PatientBillGrouped.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.14.0.final using JasperReports Library version 6.14.0-2ab0d8625be255bf609c78e1181801213e51db8f  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PatientBillGrouped" pageWidth="595" pageHeight="842" whenNoDataType="NoPages" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" uuid="71489815-736e-4d54-ac77-256fdc80e356">
+<!-- Created with Jaspersoft Studio version 6.16.0.final using JasperReports Library version 6.16.0-48579d909b7943b64690c65c71e07e0b80981928  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PatientBillGrouped" pageWidth="595" pageHeight="842" whenNoDataType="NoPages" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" resourceBundle="PatientBillGrouped" whenResourceMissingType="Key" uuid="71489815-736e-4d54-ac77-256fdc80e356">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
@@ -12,9 +12,11 @@
 	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
+	<property name="net.sf.jasperreports.print.create.bookmarks" value="false"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
+	<parameter name="SUBREPORT_RESOURCE_BUNDLE_1" class="java.util.ResourceBundle" isForPrompting="false"/>
 	<parameter name="billID" class="java.lang.String"/>
 	<parameter name="Hospital" class="java.lang.String"/>
 	<parameter name="Address" class="java.lang.String"/>
@@ -136,10 +138,10 @@ WHERE $X{IN ,BLL_ID, collectionbillsId }]]>
 				<textElement>
 					<font fontName="DejaVu Sans" size="18"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}.getString( "angal.report.patientbill.billsgroup")]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{PATIENT_BILLS_SUMMARY}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight" pattern="EEEEE dd MMMMM yyyy" isBlankWhenNull="false">
-				<reportElement key="textField-16" x="54" y="45" width="481" height="15" uuid="725bd5ec-28d0-414c-82aa-69e64cd04c02"/>
+				<reportElement key="textField-16" x="70" y="45" width="465" height="15" uuid="725bd5ec-28d0-414c-82aa-69e64cd04c02"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -152,7 +154,7 @@ WHERE $X{IN ,BLL_ID, collectionbillsId }]]>
 				<textFieldExpression><![CDATA[$F{BLL_USR_ID_A}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight" pattern="" isBlankWhenNull="false">
-				<reportElement key="textField-17" x="54" y="31" width="481" height="15" uuid="6882d07b-a9e4-43c0-bdfe-3b2cd7f26ccc"/>
+				<reportElement key="textField-17" x="70" y="31" width="465" height="15" uuid="6882d07b-a9e4-43c0-bdfe-3b2cd7f26ccc"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -165,7 +167,7 @@ WHERE $X{IN ,BLL_ID, collectionbillsId }]]>
 				<textFieldExpression><![CDATA[$F{BLL_ID_PAT} + " - " + $F{PAT_NAME}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight" pattern="EEEEE dd MMMMM yyyy" isBlankWhenNull="false">
-				<reportElement key="textField-23" x="54" y="60" width="188" height="15" uuid="3f595b30-9461-4a08-acdb-ec21f9feea05"/>
+				<reportElement key="textField-23" x="70" y="60" width="172" height="15" uuid="3f595b30-9461-4a08-acdb-ec21f9feea05"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -191,25 +193,25 @@ WHERE $X{IN ,BLL_ID, collectionbillsId }]]>
 				<textFieldExpression><![CDATA[$F{BLL_STATUS}.equals( "D" ) ? "DELETED" : null]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField-26" x="0" y="31" width="49" height="16" uuid="c7fefd0b-5cf9-4f58-b178-90bebe730bb9"/>
+				<reportElement key="textField-26" x="0" y="31" width="60" height="16" uuid="c7fefd0b-5cf9-4f58-b178-90bebe730bb9"/>
 				<textElement>
 					<font fontName="DejaVu Sans" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}.getString( "angal.opd.patient")]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{Patient}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField-27" x="0" y="47" width="49" height="15" uuid="e7669491-929f-47a1-a19f-e0510667440b"/>
+				<reportElement key="textField-27" x="0" y="47" width="60" height="15" uuid="e7669491-929f-47a1-a19f-e0510667440b"/>
 				<textElement textAlignment="Left" verticalAlignment="Top">
 					<font size="8" isBold="false" isItalic="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}.getString( "angal.report.patientbill.cashier" )]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{Cashier}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField-28" x="0" y="62" width="49" height="15" uuid="2257919e-7f0c-4c73-9bc5-35c26fb1542e"/>
+				<reportElement key="textField-28" x="0" y="62" width="60" height="15" uuid="2257919e-7f0c-4c73-9bc5-35c26fb1542e"/>
 				<textElement textAlignment="Left" verticalAlignment="Top">
 					<font size="10" isBold="false" isItalic="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}.getString( "angal.report.billsreport.date" )]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{Date}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
 				<reportElement key="textField-36" x="0" y="77" width="535" height="25" uuid="f1849f73-8031-416e-a479-f9ab860f07c9"/>
@@ -222,7 +224,7 @@ WHERE $X{IN ,BLL_ID, collectionbillsId }]]>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="18"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}.getString( "angal.report.patientbill.detailsinvoice")]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{DetailsInvoice}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
@@ -233,35 +235,35 @@ WHERE $X{IN ,BLL_ID, collectionbillsId }]]>
 				<textElement textAlignment="Left" verticalAlignment="Top">
 					<font fontName="DejaVu Sans" size="12" isBold="true" isItalic="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}.getString( "angal.report.oh009inpatientreport.code" )]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{Code}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
 				<reportElement key="textField-31" x="460" y="4" width="75" height="18" uuid="af0e2fc1-1578-4d9e-ac26-028b49919b6e"/>
 				<textElement textAlignment="Right" verticalAlignment="Top">
 					<font fontName="DejaVu Sans" size="12" isBold="true" isItalic="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}.getString( "angal.report.moh717monthlyworkloadreportforhospitalspage2b.total" )]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{Total}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
 				<reportElement key="textField-32" x="382" y="4" width="74" height="18" uuid="528333da-044e-4b35-89fd-89a1311fdd86"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="DejaVu Sans" size="12" isBold="true" isItalic="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}.getString( "angal.report.billsreport.quantity" )]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{Quantity}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
 				<reportElement key="textField-33" x="305" y="4" width="71" height="18" uuid="a3986887-665e-434e-ba77-f457fa9f8d93"/>
 				<textElement textAlignment="Right" verticalAlignment="Top">
 					<font fontName="DejaVu Sans" size="12" isBold="true" isItalic="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}.getString( "angal.report.patientbill.unitprice" )]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{Price}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
 				<reportElement key="textField-35" x="54" y="4" width="245" height="18" uuid="56b108c8-ff6f-4015-b775-ec543b95b0a0"/>
 				<textElement textAlignment="Left" verticalAlignment="Top">
 					<font fontName="DejaVu Sans" size="12" isBold="true" isItalic="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}.getString( "angal.report.patientbill.designation" )]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{Item}]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnHeader>
@@ -340,28 +342,28 @@ WHERE $X{IN ,BLL_ID, collectionbillsId }]]>
 	<pageFooter>
 		<band height="38" splitType="Stretch">
 			<textField pattern="dd/MM/yyyy HH.mm" isBlankWhenNull="false">
-				<reportElement key="textField-37" x="40" y="1" width="82" height="14" uuid="5c942180-554d-428a-afbf-7105dcb87861"/>
+				<reportElement key="textField-37" x="40" y="1" width="130" height="14" uuid="5c942180-554d-428a-afbf-7105dcb87861"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new Date()]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement key="textField-38" x="0" y="1" width="40" height="14" uuid="7f0016bc-cad5-4876-86c9-59db3fe5d794"/>
+			<textField>
+				<reportElement key="textField-38" x="0" y="1" width="40" height="14" uuid="4168178e-b867-48a0-b2ef-1c20149ed242"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="8" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+					<font fontName="DejaVu Sans" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
-				<text><![CDATA[Printed]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Printed}]]></textFieldExpression>
+			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField-39" x="382" y="1" width="54" height="14" uuid="1c0bde70-2868-4f90-9f5b-7332af39f352"/>
+				<reportElement key="textField-39" x="314" y="1" width="166" height="14" uuid="1c0bde70-2868-4f90-9f5b-7332af39f352"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}.getString( "angal.report.diseaseslist.page" ) +" "+ $V{PAGE_NUMBER} +" "+ $P{REPORT_RESOURCE_BUNDLE}.getString( "angal.report.diseaseslist.of" )]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{Page} +" "+ $V{PAGE_NUMBER} +" "+ $R{of}]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report" isBlankWhenNull="false">
-				<reportElement key="textField-40" x="436" y="1" width="54" height="14" uuid="bf5312b4-d8aa-491e-a248-74c1bc2b0932"/>
+				<reportElement key="textField-40" x="480" y="1" width="54" height="14" uuid="bf5312b4-d8aa-491e-a248-74c1bc2b0932"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
@@ -389,21 +391,24 @@ WHERE $X{IN ,BLL_ID, collectionbillsId }]]>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="12" isBold="true" isItalic="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}.getString( "angal.report.billsreportuserallindate.total" )]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{Total}]]></textFieldExpression>
 			</textField>
 			<subreport isUsingCache="true">
 				<reportElement key="subreport-1" stretchType="RelativeToBandHeight" mode="Transparent" x="0" y="27" width="535" height="73" isPrintWhenDetailOverflows="true" uuid="f0e7a334-fe8f-4baf-b53c-f2f4c9eb7dfa"/>
 				<subreportParameter name="billID">
 					<subreportParameterExpression><![CDATA[$P{billID}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="REPORT_RESOURCE_BUNDLE">
-					<subreportParameterExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}]]></subreportParameterExpression>
-				</subreportParameter>
 				<subreportParameter name="collectionbillsId">
 					<subreportParameterExpression><![CDATA[$P{collectionbillsId}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="totalToPaid">
 					<subreportParameterExpression><![CDATA[$V{TOTAL_BILL}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="REPORT_LOCALE">
+					<subreportParameterExpression><![CDATA[$P{REPORT_LOCALE}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="REPORT_RESOURCE_BUNDLE">
+					<subreportParameterExpression><![CDATA[$P{SUBREPORT_RESOURCE_BUNDLE_1}]]></subreportParameterExpression>
 				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "PatientBillGroupedPayments.jasper"]]></subreportExpression>
