OP-529 fix table case name in jrxml file

--- a/rpt/ProductLedgerWard.jrxml
+++ b/rpt/ProductLedgerWard.jrxml
@@ -52,7 +52,7 @@
 		(SELECT AVG(LT_COST)
 			FROM MEDICALDSRSTOCKMOV
 			LEFT JOIN MEDICALDSRSTOCKMOVTYPE ON MMV_MMVT_ID_A = MMVT_ID_A
-			LEFT JOIN MEDICALDSRlot ON MMV_LT_ID_A = LT_ID_A
+			LEFT JOIN MEDICALDSRLOT ON MMV_LT_ID_A = LT_ID_A
 			WHERE MMVT_TYPE LIKE '%-%'
 			AND DATE(MMV_DATE) < DATE($P{fromdate})
 			AND MMV_WRD_ID_A = $P{WardCode}
@@ -140,7 +140,7 @@ SELECT "2" AS ORDERING_FIELD,
 					LEFT JOIN
 				MEDICALDSRSTOCKMOVTYPE ON MMV_MMVT_ID_A = MMVT_ID_A
 					LEFT JOIN
-				MEDICALDSRlot ON MMV_LT_ID_A = LT_ID_A
+				MEDICALDSRLOT ON MMV_LT_ID_A = LT_ID_A
 
 			WHERE
 				DATE(MMV_DATE) BETWEEN DATE($P{fromdate}) AND DATE($P{todate})
