--- a/rpt/ProductLedger.jrxml
+++ b/rpt/ProductLedger.jrxml
@@ -591,7 +591,7 @@ ORDER BY ORDERING_FIELD ASC, MMV_DATE ASC, MMV_REFNO DESC]]>
 				<textElement textAlignment="Left" verticalAlignment="Bottom">
 					<font fontName="DejaVu Sans" size="10" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$R{Origin.Dest.}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{Orig.Dest.}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
 				<reportElement key="staticText" x="593" y="0" width="51" height="42" forecolor="#000000" uuid="4cbba408-528e-4d3d-b988-6766699ac22e"/>
