--- a/rpt/patient_examination.jrxml
+++ b/rpt/patient_examination.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
+<!-- Created with Jaspersoft Studio version 6.16.0.final utlizzo versione della libreria JasperReports6.16.0-48579d909b7943b64690c65c71e07e0b80981928  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="patient_examination" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" resourceBundle="patient_examination" whenResourceMissingType="Key" uuid="b7e0aab0-1467-4a10-b5bb-43326790937b">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
@@ -381,19 +381,6 @@ WHERE PEX_ID = $P{examId}]]>
 					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA["version 1.0"]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement key="staticText-9" x="0" y="22" width="350" height="11" uuid="c7979dcd-1742-4d74-821e-da0841f5912c"/>
-				<box>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineColor="#000000"/>
-					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement>
-					<font size="7"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$R{ThisReportShowTheLastExaminationOfThePatient}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
