--- a/rpt/patient_clinical_sheet_ver3.jrxml
+++ b/rpt/patient_clinical_sheet_ver3.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
+<!-- Created with Jaspersoft Studio version 6.16.0.final utlizzo versione della libreria JasperReports6.16.0-48579d909b7943b64690c65c71e07e0b80981928  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="patient_clinical_sheet_ver3" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" resourceBundle="patient_clinical_sheet_ver3" whenResourceMissingType="Key" uuid="9d971b4c-5fa3-4819-adfb-28dfac75b382">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
@@ -33,7 +33,7 @@ SELECT CONCAT("Opd", " (", OPD_PROG_YEAR, ")") AS TYPE,
 	FROM 
 		OPD 
 		LEFT JOIN PATIENT ON (OPD_PAT_ID = PAT_ID) 
-	WHERE OPD_PAT_ID = $P{patientID} AND (OPD_DATE BETWEEN $P{Date_from} AND $P{Date_to})
+	WHERE OPD_PAT_ID = $P{patientID} AND (DATE(OPD_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
 	
 UNION
 
@@ -50,7 +50,7 @@ SELECT CONCAT("ADM", " (", ADM_YPROG, ")") AS TYPE,
 		LEFT JOIN ADMISSIONTYPE ON (ADMT_ID_A = ADM_ADMT_ID_A_ADM)
 		LEFT JOIN DISCHARGETYPE ON (DIST_ID_A = ADM_DIST_ID_A)
 	WHERE ADM_DELETED = 'N'
-		AND ADM_PAT_ID = $P{patientID} AND (ADM_DATE_ADM BETWEEN $P{Date_from} AND $P{Date_to})
+		AND ADM_PAT_ID = $P{patientID} AND (DATE(ADM_DATE_ADM) BETWEEN $P{Date_from} AND $P{Date_to})
 
 UNION
         SELECT "Examination" AS TYPE,
@@ -62,7 +62,7 @@ UNION
 	   PEX_NOTE AS NOTE
 	FROM 
 		PATIENTEXAMINATION
-WHERE PEX_PAT_ID = $P{patientID} AND (PEX_DATE BETWEEN $P{Date_from} AND $P{Date_to})
+WHERE PEX_PAT_ID = $P{patientID} AND (DATE(PEX_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
 UNION
 
 SELECT "Drugs" AS TYPE,
@@ -78,7 +78,7 @@ SELECT "Drugs" AS TYPE,
 		FROM 
 			MEDICALDSRSTOCKMOVWARD  
 			LEFT JOIN MEDICALDSR ON (MMVN_MDSR_ID = MDSR_ID) 
-		WHERE MMVN_PAT_ID = $P{patientID} AND (MMVN_DATE BETWEEN $P{Date_from} AND $P{Date_to})
+		WHERE MMVN_PAT_ID = $P{patientID} AND (DATE(MMVN_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
 		GROUP BY DATE(MMVN_DATE), MMVN_MDSR_ID
 	) AS MEDICALS
 GROUP BY DATE(DATE)
@@ -100,7 +100,7 @@ SELECT "Operations" AS TYPE,
 			LEFT JOIN OPD ON (OPER_OPD_ID = OPD_ID) 
 			LEFT JOIN ADMISSION ON (OPER_ADMISSION_ID = ADM_ID) 
 		WHERE (OPD_PAT_ID = $P{patientID} OR ADM_PAT_ID = $P{patientID}) 
-		  AND (OPER_OPDATE BETWEEN $P{Date_from} AND $P{Date_to})
+		  AND (DATE(OPER_OPDATE) BETWEEN $P{Date_from} AND $P{Date_to})
 		GROUP BY DATE(OPER_OPDATE)
 	) AS OPERATIONS
 GROUP BY DATE(DATE)
@@ -118,7 +118,7 @@ SELECT "Laboratory" AS TYPE,
 		LABORATORY  
 		LEFT JOIN EXAM ON (EXA_ID_A = LAB_EXA_ID_A) 
 		LEFT JOIN LABORATORYROW ON LABR_LAB_ID = LAB_ID
-	WHERE LAB_PAT_ID = $P{patientID} AND (LAB_DATE BETWEEN $P{Date_from} AND $P{Date_to})
+	WHERE LAB_PAT_ID = $P{patientID} AND (DATE(LAB_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
     AND EXA_PROC = 1
     
 UNION
@@ -134,7 +134,7 @@ SELECT "Laboratory" AS TYPE,
 		LABORATORY  
 		LEFT JOIN EXAM ON (EXA_ID_A = LAB_EXA_ID_A) 
 		LEFT JOIN LABORATORYROW ON LABR_LAB_ID = LAB_ID
-	WHERE LAB_PAT_ID = $P{patientID} AND (LAB_DATE BETWEEN $P{Date_from} AND $P{Date_to})
+	WHERE LAB_PAT_ID = $P{patientID} AND (DATE(LAB_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
 	AND EXA_PROC = 2
 GROUP BY LABR_LAB_ID
 
@@ -198,10 +198,10 @@ ORDER BY DATE DESC]]>
 				<textElement>
 					<font size="7"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$R{Version}+" 2.0"]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{Version}+" 3.0"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement key="staticText-3" x="0" y="22" width="350" height="11" uuid="32458d98-2ae1-4dab-a679-c9235917d841"/>
+				<reportElement key="staticText-3" x="0" y="22" width="535" height="11" uuid="32458d98-2ae1-4dab-a679-c9235917d841"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -211,14 +211,66 @@ ORDER BY DATE DESC]]>
 				<textElement>
 					<font size="7"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$R{ThisReportListAllTheAdmissionsAndLaboratoryExamsForThePatientMoreRecentInformationAsFirst}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{ThisReportShowsPatientHistoryBetweenTwoDatesMoreRecentInformationAsFirst}]]></textFieldExpression>
 			</textField>
 			<subreport isUsingCache="true">
-				<reportElement key="subreport-1" x="0" y="42" width="535" height="55" uuid="5d373780-5338-4367-8206-e45cba9aae79"/>
+				<reportElement key="subreport-1" x="0" y="51" width="535" height="55" uuid="5d373780-5338-4367-8206-e45cba9aae79"/>
 				<parametersMapExpression><![CDATA[$P{REPORT_PARAMETERS_MAP}]]></parametersMapExpression>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "patient_clinical_sheet_patsubreport.jasper"]]></subreportExpression>
 			</subreport>
+			<textField>
+				<reportElement key="staticText-21" x="411" y="33" width="26" height="18" uuid="159c29bb-2e42-4c09-8828-19bd79cad6e9"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans" size="10" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$R{To}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement key="staticText-22" x="158" y="33" width="155" height="18" uuid="e9a133fe-d920-478c-8e32-715adc027093"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans" size="10" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$R{Report.From}]]></textFieldExpression>
+			</textField>
+			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
+				<reportElement key="textField-35" x="313" y="33" width="98" height="18" uuid="2388479c-c2d5-4c85-8160-9e4e5714ce0a"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{Date_from}]]></textFieldExpression>
+			</textField>
+			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
+				<reportElement key="textField-36" x="437" y="33" width="98" height="18" uuid="7a3953c2-9929-40f2-a720-39f01fb5a080"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{Date_to}]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<pageHeader>
