--- a/rpt/patient_clinical_sheet_ver3.jrxml
+++ b/rpt/patient_clinical_sheet_ver3.jrxml
@@ -33,7 +33,7 @@ SELECT CONCAT("Opd", " (", OPD_PROG_YEAR, ")") AS TYPE,
 	FROM 
 		OPD 
 		LEFT JOIN PATIENT ON (OPD_PAT_ID = PAT_ID) 
-	WHERE OPD_PAT_ID = $P{patientID} AND (DATE(OPD_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
+	WHERE OPD_PAT_ID = $P{patientID} AND (OPD_DATE BETWEEN $P{Date_from} AND $P{Date_to})
 	
 UNION
 
@@ -50,7 +50,7 @@ SELECT CONCAT("ADM", " (", ADM_YPROG, ")") AS TYPE,
 		LEFT JOIN ADMISSIONTYPE ON (ADMT_ID_A = ADM_ADMT_ID_A_ADM)
 		LEFT JOIN DISCHARGETYPE ON (DIST_ID_A = ADM_DIST_ID_A)
 	WHERE ADM_DELETED = 'N'
-		AND ADM_PAT_ID = $P{patientID} AND (DATE(ADM_DATE_ADM) BETWEEN $P{Date_from} AND $P{Date_to})
+		AND ADM_PAT_ID = $P{patientID} AND (ADM_DATE_ADM BETWEEN $P{Date_from} AND $P{Date_to})
 
 UNION
         SELECT "Examination" AS TYPE,
@@ -62,7 +62,7 @@ UNION
 	   PEX_NOTE AS NOTE
 	FROM 
 		PATIENTEXAMINATION
-WHERE PEX_PAT_ID = $P{patientID} AND (DATE(PEX_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
+WHERE PEX_PAT_ID = $P{patientID} AND (PEX_DATE BETWEEN $P{Date_from} AND $P{Date_to})
 UNION
 
 SELECT "Drugs" AS TYPE,
@@ -78,7 +78,7 @@ SELECT "Drugs" AS TYPE,
 		FROM 
 			MEDICALDSRSTOCKMOVWARD  
 			LEFT JOIN MEDICALDSR ON (MMVN_MDSR_ID = MDSR_ID) 
-		WHERE MMVN_PAT_ID = $P{patientID} AND (DATE(MMVN_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
+		WHERE MMVN_PAT_ID = $P{patientID} AND (MMVN_DATE BETWEEN $P{Date_from} AND $P{Date_to})
 		GROUP BY DATE(MMVN_DATE), MMVN_MDSR_ID
 	) AS MEDICALS
 GROUP BY DATE(DATE)
@@ -100,7 +100,7 @@ SELECT "Operations" AS TYPE,
 			LEFT JOIN OPD ON (OPER_OPD_ID = OPD_ID) 
 			LEFT JOIN ADMISSION ON (OPER_ADMISSION_ID = ADM_ID) 
 		WHERE (OPD_PAT_ID = $P{patientID} OR ADM_PAT_ID = $P{patientID}) 
-		  AND (DATE(OPER_OPDATE) BETWEEN $P{Date_from} AND $P{Date_to})
+		  AND (OPER_OPDATE BETWEEN $P{Date_from} AND $P{Date_to})
 		GROUP BY DATE(OPER_OPDATE)
 	) AS OPERATIONS
 GROUP BY DATE(DATE)
@@ -118,7 +118,7 @@ SELECT "Laboratory" AS TYPE,
 		LABORATORY  
 		LEFT JOIN EXAM ON (EXA_ID_A = LAB_EXA_ID_A) 
 		LEFT JOIN LABORATORYROW ON LABR_LAB_ID = LAB_ID
-	WHERE LAB_PAT_ID = $P{patientID} AND (DATE(LAB_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
+	WHERE LAB_PAT_ID = $P{patientID} AND (LAB_DATE BETWEEN $P{Date_from} AND $P{Date_to})
     AND EXA_PROC = 1
     
 UNION
@@ -134,11 +134,27 @@ SELECT "Laboratory" AS TYPE,
 		LABORATORY  
 		LEFT JOIN EXAM ON (EXA_ID_A = LAB_EXA_ID_A) 
 		LEFT JOIN LABORATORYROW ON LABR_LAB_ID = LAB_ID
-	WHERE LAB_PAT_ID = $P{patientID} AND (DATE(LAB_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
+	WHERE LAB_PAT_ID = $P{patientID} AND (LAB_DATE BETWEEN $P{Date_from} AND $P{Date_to})
 	AND EXA_PROC = 2
 GROUP BY LABR_LAB_ID
 
+UNION
 
+SELECT "Laboratory" AS TYPE,
+	   LAB_DATE AS DATE, LAB_RES AS IDS,
+	   EXA_DESC DETAILS_1,
+	   LAB_RES AS DETAILS_2,
+	   "" AS DETAILS_3,
+	   "" AS DETAILS_4,
+	   LAB_NOTE AS NOTE
+	FROM 
+		LABORATORY  
+		LEFT JOIN EXAM ON (EXA_ID_A = LAB_EXA_ID_A) 
+		LEFT JOIN LABORATORYROW ON LABR_LAB_ID = LAB_ID
+	WHERE LAB_PAT_ID = $P{patientID} AND (LAB_DATE BETWEEN $P{Date_from} AND $P{Date_to})
+    AND EXA_PROC = 3
+	
+GROUP BY LABR_LAB_ID
     
 ) 
 AS DETAILS
