--- a/rpt/BillsReportPending.jrxml
+++ b/rpt/BillsReportPending.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
+<!-- Created with Jaspersoft Studio version 6.16.0.final utlizzo versione della libreria JasperReports6.16.0-48579d909b7943b64690c65c71e07e0b80981928  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="BillsReportPending" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" resourceBundle="BillsReportPending" whenResourceMissingType="Key" uuid="1f58607c-756e-48c5-b6f1-ddb3e1d18223">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
@@ -121,7 +121,7 @@ ORDER BY BLL_DATE]]>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="114" splitType="Stretch">
+		<band height="131" splitType="Stretch">
 			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-18" x="0" y="0" width="535" height="22" uuid="0cc77400-8d51-4fec-92d6-735d43882f62"/>
 				<box>
@@ -185,7 +185,20 @@ ORDER BY BLL_DATE]]>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="14" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$R{Periodical.Incomes.Billed.And.Receivables.Report.With.Pending.Invoices}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{Periodical.Incomes.Billed.And.Receivables.Report}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement key="staticText-13" x="0" y="104" width="535" height="21" uuid="a46b9b28-dc30-4a76-86bf-4f9dc7f7d0f2"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement verticalAlignment="Top">
+					<font fontName="DejaVu Sans" size="14" isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$R{With.Pending.Invoices}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
@@ -338,7 +351,7 @@ ORDER BY BLL_DATE]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$R{Paid}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField textAdjust="ScaleFont">
 				<reportElement key="staticText-20" x="492" y="0" width="43" height="32" uuid="0b61aaac-c160-4959-ae7a-30c037d47c7d"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
