--- a/rpt/OH007_lab_monthly_report.jrxml
+++ b/rpt/OH007_lab_monthly_report.jrxml
@@ -1,34 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
+<!-- Created with Jaspersoft Studio version 6.16.0.final utlizzo versione della libreria JasperReports6.16.0-48579d909b7943b64690c65c71e07e0b80981928  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="OH007_lab_monthly_report" pageWidth="595" pageHeight="842" whenNoDataType="NoPages" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" resourceBundle="OH007_lab_monthly_report" whenResourceMissingType="Key" uuid="da02e8ff-df23-4ff3-bded-20dc254cc549">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
+	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w1" value="271"/>
+	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w2" value="723"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="oh"/>
+	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
-	<parameter name="year" class="java.lang.String"/>
-	<parameter name="month" class="java.lang.String"/>
+	<parameter name="year" class="java.lang.String">
+		<defaultValueExpression><![CDATA[2021]]></defaultValueExpression>
+	</parameter>
+	<parameter name="month" class="java.lang.String">
+		<defaultValueExpression><![CDATA[10]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[select * from (
-   select EXA_DESC EXAM, LAB_MATERIAL MATERIAL, 'tests done' CATEGORY, count(*) COUNT 
+   
+   select EXA_DESC AS EXAM, LAB_MATERIAL AS MATERIAL, 'Tests done' AS CATEGORY, count(*) AS COUNT 
+   from LABORATORY, EXAM
+   where LAB_EXA_ID_A = EXA_ID_A
+   and month(LAB_EXAM_DATE) = $P{month} and year(LAB_EXAM_DATE) = $P{year}
+   group by EXA_DESC, LAB_MATERIAL, 'Tests done'
+   
+union all
+   
+   select EXA_DESC AS EXAM, LAB_MATERIAL AS MATERIAL, case when (LAB_RES = EXA_DEFAULT) then 'Negative' else 'Positive' end AS CATEGORY, count(*) AS COUNT  
+   from LABORATORY, EXAM 
+   where LAB_EXA_ID_A = EXA_ID_A
+   and month(LAB_EXAM_DATE) = $P{month} and year(LAB_EXAM_DATE) = $P{year}
+   group by EXA_DESC, LAB_MATERIAL, case when (LAB_RES = EXA_DEFAULT) then 'Negative' else 'Positive' end
+
+union all
+
+   select EXA_DESC AS EXAM, 'All materials' AS MATERIAL, 'Total tests done' AS CATEGORY, count(*) AS COUNT 
    from LABORATORY, EXAM
    where LAB_EXA_ID_A = EXA_ID_A
    and month(LAB_EXAM_DATE)=$P{month} and year(LAB_EXAM_DATE)=$P{year}
-   group by EXA_DESC,LAB_MATERIAL,'tests done'
-union all
-   select EXA_DESC,LAB_MATERIAL,
-   case when (LAB_RES=EXA_DEFAULT) then 'Negative' else 'Positive' end,  
-   count(*) from LABORATORY, EXAM where LAB_EXA_ID_A = EXA_ID_A
-   and month(LAB_EXAM_DATE)=$P{month} and year(LAB_EXAM_DATE)=$P{year}
-   group by EXA_DESC,LAB_MATERIAL,case when (LAB_RES=EXA_DEFAULT) then 'Negative' else 'Positive' end
-union all
-   select EXA_DESC, 'xall materials', 'total tests done' , count(*)  
-   from LABORATORY, EXAM
-   where LAB_EXA_ID_A = EXA_ID_A
-   and month(LAB_EXAM_DATE)=$P{month} and year(LAB_EXAM_DATE)=$P{year}
-   group by EXA_DESC,'xall materials','total tests done'
+   group by EXA_DESC, 'All materials', 'Total tests done'
+   
 ) labdata
- order by 1,2,3]]>
+
+ order by EXAM, MATERIAL, CATEGORY]]>
 	</queryString>
 	<field name="EXAM" class="java.lang.String"/>
 	<field name="MATERIAL" class="java.lang.String"/>
@@ -39,7 +54,7 @@ union all
 		<groupHeader>
 			<band height="17" splitType="Stretch">
 				<textField isBlankWhenNull="false">
-					<reportElement key="textField" x="5" y="1" width="459" height="15" uuid="65e22d65-f605-467a-b787-d21363f55b20"/>
+					<reportElement key="textField" x="0" y="0" width="459" height="15" uuid="65e22d65-f605-467a-b787-d21363f55b20"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -191,7 +206,7 @@ union all
 	<detail>
 		<band height="13" splitType="Stretch">
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="467" y="0" width="59" height="13" uuid="69693714-8640-49cf-995b-da3c02e06c28"/>
+				<reportElement key="textField" x="467" y="0" width="64" height="13" uuid="69693714-8640-49cf-995b-da3c02e06c28"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -204,7 +219,7 @@ union all
 				<textFieldExpression><![CDATA[$F{COUNT}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="253" y="0" width="100" height="13" uuid="d164ff6e-1740-4824-8d9b-79222c30626e"/>
+				<reportElement key="textField" x="253" y="0" width="90" height="13" uuid="d164ff6e-1740-4824-8d9b-79222c30626e"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -214,10 +229,10 @@ union all
 				<textElement>
 					<font fontName="DejaVu Sans" size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{MATERIAL}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{MATERIAL}.equals( "All Materials" ) ? $R{AllMaterials} : $F{MATERIAL}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="358" y="0" width="111" height="13" uuid="3d5e2d62-e94d-4ea3-ac75-05b7668b8669"/>
+				<reportElement key="textField" x="358" y="0" width="90" height="13" uuid="3d5e2d62-e94d-4ea3-ac75-05b7668b8669"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -227,7 +242,10 @@ union all
 				<textElement>
 					<font fontName="DejaVu Sans" size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{CATEGORY}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{CATEGORY}.equals( "Total tests done" ) ? $R{TotalTestsDone} :
+	$F{CATEGORY}.equals( "Tests done" ) ? $R{TestsDone} :
+		$F{CATEGORY}.equals( "Positive" ) ? $R{Positive} :
+			$F{CATEGORY}.equals( "Negative" ) ? $R{Negative} : $F{CATEGORY}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
