OP-710 Fix disease report columns

--- a/rpt/diseaseslist.jrxml
+++ b/rpt/diseaseslist.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
+<!-- Created with Jaspersoft Studio version 6.16.0.final utlizzo versione della libreria JasperReports6.16.0-48579d909b7943b64690c65c71e07e0b80981928  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="diseaseslist" pageWidth="595" pageHeight="842" whenNoDataType="NoPages" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" resourceBundle="diseaseslist" whenResourceMissingType="Key" uuid="a8aeb358-3c54-4b47-8cab-951ce45420a5">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
@@ -133,7 +133,7 @@ order by DCL_DESC, DIS_DESC]]>
 				<textElement textAlignment="Center">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{OPD}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{IPD}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
 				<reportElement key="textField" x="405" y="0" width="65" height="11" uuid="9ec8ba67-3ca3-4fba-8c09-e407b8a44022"/>
@@ -146,7 +146,7 @@ order by DCL_DESC, DIS_DESC]]>
 				<textElement textAlignment="Center">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{IPD}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{OPD}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
